<resources>
    <string name="app_name">Francesinhas</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_login">Log in</string>
    <string name="add_new">New</string>
    <string name="invalid_place">Invalid place\nYou must select a restaurant</string>
    <string name="place_exists">Place already exists</string>
    <string name="facebook_app_id" translatable="false">1621207514793575</string>
    <string name="google_id" translatable="false">AIzaSyDayDAcEmOCxyA943yIypbch34SexBdOmc</string>
    <string name="details_address">Address</string>
    <string name="details_phone">Phone</string>
    <string name="details_website">Website</string>
    <string name="loading_map">Loading map…</string>
    <string name="logged_in_to_vote">Log in to start voting</string>
    <string name="logged_in_to_add">Log in to add new places</string>
    <string name="log_in_failed">Login failed\nPlease try again</string>
    <string name="google_play_failed">Connection to Google Play failed</string>
    <string name="transition_text" translatable="false">transition_text</string>
    <string name="transition_image" translatable="false">transition_image</string>
    <string name="transition_bars" translatable="false">transition_bars</string>
    <string name="transition_clickable" translatable="false">transition_clickable</string>
    <string name="transition_votes" translatable="false">transition_votes</string>
    <string name="no_places">No places found yet!</string>
    <string name="continue_as_guest">Continue without login</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="francesinhas">Francesinhas</string>
    <string name="price_range">Price range</string>
    <string name="loading">Loading…</string>
    <string name="not_connected">You\'re not connected!</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="bottom_price">Price</string>
    <string name="bottom_ranking">Ranking</string>
    <string name="bottom_distance">Distance</string>
</resources>