<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp"
        app:layout_collapseMode="pin">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?colorPrimary"
            app:expandedTitleGravity="center"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="?colorPrimaryDark">

            <include layout="@layout/backdrop_shaded"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:elevation="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_overlapTop="64dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/details_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_s"
                android:layout_marginRight="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_s"
                android:background="@android:color/white"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:id="@+id/details_address_parent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/margin_m">

                    <TextView
                        android:id="@+id/details_address_label"
                        style="@style/Text.Header.4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_map_black_24dp"
                        android:drawableStart="@drawable/ic_map_black_24dp"
                        android:text="@string/details_address"/>

                    <TextView
                        android:id="@+id/details_address_content"
                        style="@style/Text.Header.3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="map"
                        android:maxLines="5"
                        android:paddingLeft="@dimen/margin_xl"
                        android:paddingRight="@dimen/margin_xl"
                        tools:text="Dummy address"/>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/map_view_height"
                        android:layout_marginLeft="@dimen/margin_m"
                        android:layout_marginRight="@dimen/margin_m"
                        android:layout_marginTop="@dimen/margin_m"
                        android:background="@android:color/white"
                        card_view:cardCornerRadius="@dimen/margin_small">

                        <TextView
                            style="@style/Text.Header.2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/loading_map"
                            android:textColor="@color/black_transparent"/>

                        <ImageView
                            android:id="@+id/map_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@null"
                            android:scaleType="centerCrop"/>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_s"
                android:layout_marginRight="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_s"
                android:background="@android:color/white"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:id="@+id/details_phone_parent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/margin_m">

                    <TextView
                        android:id="@+id/details_phone_label"
                        style="@style/Text.Header.4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                        android:drawableStart="@drawable/ic_local_phone_black_24dp"
                        android:text="@string/details_phone"/>

                    <TextView
                        android:id="@+id/details_phone_content"
                        style="@style/Text.Header.3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/margin_xl"
                        android:paddingRight="@dimen/margin_xl"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_s"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:id="@+id/details_url_parent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/margin_m">

                    <TextView
                        android:id="@+id/details_url_label"
                        style="@style/Text.Header.4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_public_black_24dp"
                        android:drawableStart="@drawable/ic_public_black_24dp"
                        android:text="@string/details_website"/>

                    <TextView
                        android:id="@+id/details_url_content"
                        style="@style/Text.Header.3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:includeFontPadding="true"
                        android:paddingLeft="@dimen/margin_xl"
                        android:paddingRight="@dimen/margin_m"
                        android:singleLine="true"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>